crates/aion-awl/tests/fixtures/rev2/step-bodies/invalid/rebound_binding.awl
//! Greet a name and shout the greeting.
workflow rebound_binding
  input name: String
  outcome shouted: type Shouted, route success

type Greeting { greeting: String }
type Shouted  { text: String }

worker voice
  action greet(name: String) -> Greeting
  action shout(text: String) -> Shouted

step greet
  greet(name: name) -> greeting
  // defect: bindings are single-assignment; `greeting` is already bound
  greet(name: name) -> greeting

step shout
  shout(text: greeting.greeting) -> loud
  loud |> route shouted
